# TableFastVue

./: .env  .gitignore  compose.yml  consumer.py
Back/: main.py
html/: app.py  index.html
html/styles/: style.css
nginx/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
nginx/conf.d/: default.conf
nginx/src/: App.vue  main.js  style.css
nginx/src/assets/: custom.css
nginx/src/components/: Gate.vue  Navigation.vue  Table.vue  TableList.vue  UserLogin.vue  UserRegister.vue
nginx/src/router/: index.js
nginx/src/services/api/: Impl.js  Service.js
nginx/src/services/auth/: Impl.js  Service.js  index.js
nginx/src/stores/: UserStore.js
rabbitmq/: .pylintrc  producer.py  pyproject.toml
server/dbSettings/: database.py  models.py
server/schedule/: .dockerignore  Dockerfile  config.py  database.py  http_client.py  main.py  models.py  producer.py  pyproject.toml
server/user/: .dockerignore  Dockerfile  config.py  database.py  login.py  main.py  pyproject.toml
