[tool.poetry]
name = "rabbitmq"
version = "0.1.0"
description = ""
authors = ["pavelxhukin <pavel_xhukin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
fastapi = "^0.115.6"

[tool.poetry.scripts]
producer = "rabbitmq.producer:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
