[tool.poetry]
name = "schedule"
version = "0.1.0"
description = ""
authors = ["pavelxhukin <pavel_xhukin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.1"
fastapi = "^0.115.6"
motor = "^3.6.0"
envparse = "^0.2.0"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
aiosqlite = "^0.20.0"
pika = "^1.3.2"
authx = "^1.4.1"
jwt = "^1.3.1"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
python-multipart = "^0.0.20"
uuid = "^1.30"
asyncio = "^3.4.3"
aio-pika = "^9.5.4"
aiohttp = "^3.11.11"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
