[tool.poetry]
name = "user"
version = "0.1.0"
description = ""
authors = ["pavelxhukin <pavel_xhukin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
authx = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
