[tool.poetry]
name = "user"
version = "0.1.0"
description = ""
authors = ["pavelxhukin <pavel_xhukin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
authx = "^1.4.1"
pika = "^1.3.2"
jwt = "^1.3.1"
pyjwt = "^2.10.1"
sqlalchemy = "^2.0.37"
pydantic = "^2.10.5"
passlib = "^1.7.4"
psycopg2 = "^2.9.10"
python-multipart = "^0.0.20"
uuid = "^1.30"
asyncio = "^3.4.3"
aio-pika = "^9.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
